changed file structure

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="start-business.html">Starting a Business</a></li>
-                    <li><a href="#">Foreign Investment</a></li>
+                    <li><a href="process/start-business.html">Starting a Business</a></li>
+                    <li><a href="foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
 
