adds clickable functionality to rows

--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -90,7 +90,7 @@
         <div class="col-md-3">
           <table class="table process-table">
             <tbody>
-              <tr>
+              <tr class='clickable-row' data-href='incorporation-licensing.html'>
                 <td>
                   Incorporation and Licensing
                 </td>
