--- a/resources/ndbp.html
+++ b/resources/ndbp.html
@@ -12,12 +12,12 @@
     <title>Website Name</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="../css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <script src="js/ie-emulation-modes-warning.js"></script>
+    <script src="../js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -92,40 +92,47 @@
             <tbody>
               <tr>
                 <td>
-                  Incorporation and Licensing
+                  Palau Chamber of Commerce
                 </td>
               </tr>
               <tr>
                 <td>
-                  Immigration and Labor
+                  National Development Bank of Palau
                 </td>
               </tr>
               <tr>
                 <td>
-                  Title and Cultural Affairs
+                  Small Business Development Center
                 </td>
               </tr>
               <tr>
                 <td>
-                  Environmental
+                  Another Resource
                 </td>
               </tr>
               <tr>
                 <td>
-                  Building Permit
+                  Another Resource
                 </td>
               </tr>
               <tr>
                 <td>
-                  Utilities
+                  All Applications
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Foreign Investment</h1>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+          <h1>
+            National Development Bank of Palau
+          </h1>
+          <p>
+            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+            <a href="">
+            Click here to visit the National Development Bank of Palau website.
+            </a>
+          </p>
         </div>
       </div>
       <!-- End main content area -->
@@ -138,12 +145,12 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="js/holder.min.js"></script>
+    <script src="../js/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
 
