--- a/president-message.html
+++ b/president-message.html
@@ -58,25 +58,25 @@
                 </li>
 
                 <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="#">Business Types</a></li>
+                <li><a href="business-types.html">Business Types</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Starting a Business</a></li>
-                    <li><a href="#">Foreign Investment</a></li>
+                    <li><a href="process/start-business.html">Starting a Business</a></li>
+                    <li><a href="process/foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">PCOC</a></li>
-                    <li><a href="#">SBDC</a></li>
-                    <li><a href="#">NDBP</a></li>
+                    <li><a href="resources/pcoc.html">PCOC</a></li>
+                    <li><a href="resources/sbdc.html">SBDC</a></li>
+                    <li><a href="resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Applications</a></li>
-                    <li><a href="#">All Resources</a></li>
+                    <li><a href="resources/all-applications.html">Applications</a></li>
+                    <li><a href="resources/resources.html">All Resources</a></li>
                   </ul>
                 </li>
 
