--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -12,12 +12,12 @@
     <title>Website Name</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="../css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
-    <script src="js/ie-emulation-modes-warning.js"></script>
+    <script src="../js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
   </head>
 
   <body>
@@ -58,25 +58,25 @@
                 </li>
 
                 <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="#">Business Types</a></li>
+                <li><a href="../business-types.html">Business Types</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Starting a Business</a></li>
-                    <li><a href="#">Foreign Investment</a></li>
+                    <li><a href="start-business.html">Starting a Business</a></li>
+                    <li><a href="foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">PCOC</a></li>
-                    <li><a href="#">SBDC</a></li>
-                    <li><a href="#">NDBP</a></li>
+                    <li><a href="../resources/pcoc.html">PCOC</a></li>
+                    <li><a href="../resources/sbdc.html">SBDC</a></li>
+                    <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Applications</a></li>
-                    <li><a href="#">All Resources</a></li>
+                    <li><a href="../resources/all-applications.html">Applications</a></li>
+                    <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
                 </li>
 
@@ -90,49 +90,42 @@
         <div class="col-md-3">
           <table class="table process-table">
             <tbody>
-              <tr>
+              <tr class="clickable-row" data-href="incorporation-licensing.html">
                 <td>
-                  Palau Chamber of Commerce
+                  Incorporation and Licensing
                 </td>
               </tr>
               <tr>
                 <td>
-                  National Development Bank of Palau
+                  Immigration and Labor
                 </td>
               </tr>
               <tr>
                 <td>
-                  Small Business Development Center
+                  Title and Cultural Affairs
                 </td>
               </tr>
               <tr>
                 <td>
-                  Another Resource
+                  Environmental
                 </td>
               </tr>
               <tr>
                 <td>
-                  Another Resource
+                  Building Permit
                 </td>
               </tr>
               <tr>
                 <td>
-                  All Applications
+                  Utilities
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
         <div class="col-md-9">
-          <h1>
-            National Development Bank of Palau
-          </h1>
-          <p>
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            <a href="">
-            Click here to visit the National Development Bank of Palau website.
-            </a>
-          </p>
+          <h1>Foreign Investment</h1>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
         </div>
       </div>
       <!-- End main content area -->
@@ -145,12 +138,12 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
-    <script src="js/holder.min.js"></script>
+    <script src="../js/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../js/script.js"></script>
   </body>
 </html>
 
