--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -58,13 +58,13 @@
                 </li>
 
                 <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="#">Business Types</a></li>
+                <li><a href="../business-types.html">Business Types</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Starting a Business</a></li>
-                    <li><a href="#">Foreign Investment</a></li>
+                    <li><a href="../process/start-business.html">Starting a Business</a></li>
+                    <li><a href="../process/foreign-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
 
