--- a/process/start-business.html
+++ b/process/start-business.html
@@ -51,7 +51,7 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="why-palau.html">Overview</a></li>
+                    <li><a href="../why-palau.html">Overview</a></li>
                     <li><a href="#">Infrastructure</a></li>
                     <li><a href="#">Incentives</a></li>
                   </ul>
@@ -90,12 +90,12 @@
         <div class="col-md-3">
           <table class="table process-table">
             <tbody>
-              <tr>
+              <tr class="clickable-row" data-href="incorporation-licensing.html">
                 <td>
                   Incorporation and Licensing
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="immigration-labor.html">
                 <td>
                   Immigration and Labor
                 </td>
