--- a/resources/resources.html
+++ b/resources/resources.html
@@ -51,32 +51,32 @@
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Why Palau?<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="why-palau.html">Overview</a></li>
+                    <li><a href="../why-palau.html">Overview</a></li>
                     <li><a href="#">Infrastructure</a></li>
                     <li><a href="#">Incentives</a></li>
                   </ul>
                 </li>
 
                 <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="#">Business Types</a></li>
+                <li><a href="../business-types.html">Business Types</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Starting a Business</a></li>
-                    <li><a href="#">Foreign Investment</a></li>
+                    <li><a href="../process/start-business.html">Starting a Business</a></li>
+                    <li><a href="../process/foreing-investment.html">Foreign Investment</a></li>
                   </ul>
                 </li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Resources<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">PCOC</a></li>
-                    <li><a href="#">SBDC</a></li>
-                    <li><a href="#">NDBP</a></li>
+                    <li><a href="pcoc.html">PCOC</a></li>
+                    <li><a href="sbdc.html">SBDC</a></li>
+                    <li><a href="ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="#">Applications</a></li>
-                    <li><a href="#">All Resources</a></li>
+                    <li><a href="all-applications.html">Applications</a></li>
+                    <li><a href="resources.html">All Resources</a></li>
                   </ul>
                 </li>
 
@@ -90,17 +90,17 @@
         <div class="col-md-3">
           <table class="table process-table">
             <tbody>
-              <tr>
+              <tr class="clickable-row" data-href="pcoc.html">
                 <td>
                   Palau Chamber of Commerce
                 </td>
               </tr>
               <tr>
-                <td>
+                <td class="clickable-row" data-href="ndbp.html">
                   National Development Bank of Palau
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="sbdc.html">
                 <td>
                   Small Business Development Center
                 </td>
@@ -115,7 +115,7 @@
                   Another Resource
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="all-applications.html">
                 <td>
                   All Applications
                 </td>
@@ -123,7 +123,7 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9">s
           <h1>Resources</h1>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
           </div>
