modified docs, added new processes and links

--- a/process/building-permit.html
+++ b/process/building-permit.html
@@ -110,7 +110,7 @@
                   Environmental
                 </td>
               </tr>
-              <tr class="clickable-row" data-href ="building-permit.html">
+              <tr class="clickable-row" data-href="building-permit.html">
                 <td>
                   Building Permit
                 </td>
@@ -124,13 +124,21 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Starting A Business</h1>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-          <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
-          <a href="">Click here to learn more</a>
-          </p>
-          <p>The panel on the left will help you navigate the steps.</p>
-          <p><a href="">Begin Process</a></p>
+          <h1>Building Permit</h1>
+          <p>All businesses must comply with state building and zoning regulations.</p>
+          <h2>Requirements</h2>
+          <p>You or your designated agent must:</p>
+          <ol ="1">
+            <li>Complete and submit an application to the relevant state for issuance of a building permit.</li>
+            <li>The State of Koror requires zoning approval before issuing a building permit. For specific state requirements, see 
+            <a href="">
+            Appendix I: State Licensing and Zoning Requirements.
+            </a></li>
+          </ol>
+          <h2>Materials</h2>
+          <p>Donec id elit non mi porta gravida at eget metus.</p>
+          <h2>Fees</h2>
+          <p>Donec id elit non mi porta gravida at eget metus.</p>
         </div>
       </div>
       <!-- End main content area -->
