--- a/process/foreign-investment.html
+++ b/process/foreign-investment.html
@@ -100,22 +100,22 @@
                   Immigration and Labor
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="title-cultural-affairs.html">
                 <td>
                   Title and Cultural Affairs
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="environmental.html">
                 <td>
                   Environmental
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="building-permit.html">
                 <td>
                   Building Permit
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="Utilities.html">
                 <td>
                   Utilities
                 </td>
