--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -100,22 +100,22 @@
                   Immigration and Labor
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="title-cultural-affairs.html">
                 <td>
                   Title and Cultural Affairs
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="environmental.html">
                 <td>
                   Environmental
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="building-permit.html">
                 <td>
                   Building Permit
                 </td>
               </tr>
-              <tr>
+              <tr class="clickable-row" data-href="utilities.html">
                 <td>
                   Utilities
                 </td>
@@ -125,15 +125,17 @@
         </div>
         <div class="col-md-9">
           <h1>Immigration and Labor</h1>
-          <p>All businesses must comply with Palauan immigration and labor regulations.
+          <p>All businesses must comply with Palauan immigration and labor regulations.</p>
           <h2>Requirements</h2>
           <p>You or your designated agent must:
           <ol ="1">
             <li>Apply for an investor's travel visa from the Department of Immigration, if needed.</li>
             <li>Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN).
+            </li>
             <li>Completer an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed.
             </li>
           </ol>
+          </p>
           <h2>Materials</h2>
           <p>Information required to register your company's Palauan employees with the Social Security Administration includes:
           <ul>
@@ -147,6 +149,8 @@
             <li>The visa application fee is US $XX.
             </li>
             <li>The Social Security registration fee is US $XX.</li>
+          </ul>
+          </p>
         </div>
       </div>
       <!-- End main content area -->
