--- a/process/title-cultural-affairs.html
+++ b/process/title-cultural-affairs.html
@@ -75,7 +75,7 @@
                     <li><a href="../resources/sbdc.html">SBDC</a></li>
                     <li><a href="../resources/ndbp.html">NDBP</a></li>
                     <li role="separator" class="divider"></li>
-                    <li><a href="../resources/all-applications.html">Applications</a></li>
+                    <li><a href="../resources/all-application.html">Applications</a></li>
                     <li><a href="../resources/resources.html">All Resources</a></li>
                   </ul>
                 </li>
@@ -110,7 +110,7 @@
                   Environmental
                 </td>
               </tr>
-              <tr class="clickable-row" data-href ="building-permit.html">
+              <tr class="clickable-row" data-href="building-permit.html">
                 <td>
                   Building Permit
                 </td>
@@ -124,13 +124,25 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Starting A Business</h1>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-          <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
-          <a href="">Click here to learn more</a>
-          </p>
-          <p>The panel on the left will help you navigate the steps.</p>
-          <p><a href="">Begin Process</a></p>
+          <h1>Title and Cultural Affairs</h1>
+          <p>All businesses must comply with Palauan immigration and labor regulations.</p>
+          <h2>Requirements</h2>
+          <p>You or your designated agent must:</p>
+          <ol ="1">
+            <li>Conduct a title search and obtain an agreement between your business owner and titleholder.
+            </li>
+            <li>Submit an application (Project Work Order) to the National Bureau of Land and Survey requesting clearance. Allow four working days for clearance to be issued.
+            </li>
+            <li>Submit an application to the Ministry of Cultural Affairs requesting clearance.
+            </li>
+          </ol>
+          <h2>Materials</h2>
+          <p>Donec id elit non mi porta gravida at eget metus.</p>
+          <h2>Fees</h2>
+          <ul>
+            <li>There is no fee for the title report issued by the Bureau of Land and Survey.</li>
+            <li>The application fee for Cultural Affairs clearance is US $XX.</li>
+          </ul>
         </div>
       </div>
       <!-- End main content area -->
