--- a/process/utilities.html
+++ b/process/utilities.html
@@ -58,7 +58,7 @@
                 </li>
 
                 <!-- <li class="active"><a href="#">Business Types</a></li> -->
-                <li><a href="../business-types.html">Business Types</a></li>
+                <li><a href="../">Business Types</a></li>
 
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Process<span class="caret"></span></a>
@@ -110,7 +110,7 @@
                   Environmental
                 </td>
               </tr>
-              <tr class="clickable-row" data-href ="building-permit.html">
+              <tr class="clickable-row" data-href="building-permit.html">
                 <td>
                   Building Permit
                 </td>
@@ -124,13 +124,22 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Starting A Business</h1>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-          <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
-          <a href="">Click here to learn more</a>
-          </p>
-          <p>The panel on the left will help you navigate the steps.</p>
-          <p><a href="">Begin Process</a></p>
+          <h1>Utilities</h1>
+          <p>All businesses must comply with Palau's environmental regulations.</p>
+          <h2>Requirements</h2>
+          <p>After receiving a state building permit, you or your designated agent must:</p>
+          <ol ="1">
+            <li>Establish a business account with the Palau Public Utilities Corporation (PPUC) for electricity, water, and sewage services.</li>
+            <li>Request temporary connection for the duration of building construction.</li>
+            <li>Request permanent connection (and meter location) at least one week prior to date of business opening.</li>
+          </ol>
+          <h2>Materials</h2>
+          <p>Donec id elit non mi porta gravida at eget metus.</p>
+          <h2>Fees</h2>
+          <ul>
+            <li>The application fee for a new service contract is US $50 plus a refundable (after one year) security deposit</li>
+            <li>The meter base relocation fee is US $15 (plus and relocation-related expenses).</li>
+          </ul>
         </div>
       </div>
       <!-- End main content area -->
