--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -130,56 +130,76 @@
           </p>
           <h2>National Forms</h2>
           <ul>
-            <li><a href="">
+            <li><a href="../applications/national/domestic-corporation.pdf">
+              Information Required For Forming A Domestic Corporation
+            </a></li>
+            <li><a href="../applications/national/fib-requirement.pdf">
+              Foreign Investment Bureau Basic Requirement For Establishing A Business In Palau
+            <li><a href="../applications/national/fiac.pdf">
               Foreign Investment Approval Certificate Application Form
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/employee-number-application.pdf">
               EIN Application
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/business-licence.pdf">
               Application For A Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/permit-to-enter.pdf">
               Application For A Permit To Enter And Work As An Investor
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/ssn-application.pdf">
               Employee Social Security Registration
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/job-vacancy.pdf">
               Job Vacancy Announcement
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/project-work-order.pdf">
               Bureau of Lands and Surveys Project Work Order
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/historical-clearance.pdf">
               Application For Historic Clearance
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/eqpb/eqpb-earthmoving-checklist.pdf">
+              Environmental Quality Protection Board (EQPB) Earthmoving Application Checklist
+            </a></li>
+            <li><a href="../applications/national/eqpb/eqpb-general-information.pdf">
               Environmental Quality Protection Board (EQPB) Permit Application
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/national/eqpb/eqpb-earthmoving-permit.pdf">
+              Environmental Quality Protection Board (EQPB) Earthmoving Permit
+            </a></li>
+            <!--add links and the other eqpb applications
+            ====================================================
+            ===-->
+            <li><a href="../applications/national/ppuc-application.pdf">
               Palau Public Utilities Corporation
               (PPUC) Application
             </a></li>
           </ul>
           <h2>State Forms</h2>
           <ul>
-            <li><a href="">
+            <li><a href="../applications/state/aimeliik/aimeliik-business-license.pdf">
               Aimeliik State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/aimeliik/aimeliik-building permit.pdf">
+              Aimeliik State Building Permit
+            </a></li>
+            <li><a href="../applications/state/airai/airai-business-license.pdf">
               Airai State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/airai/airai-building-permit.pdf">
+              Airai State Building Permit
+            </a></li>
+            <li><a href="../applications/state/angaur/angaur-business-license.pdf">
               Angaur State Business License
             </a></li>
             <li><a href="">
               Hatohobei State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/kayangel/kayangel-business-license.pdf">
               Kayangel State Business License
             </a></li>
-            <li><a href="">
+            <li><a href="../applications/state/koror/koror-business-license.pdf">
               Koror State Business License
             </a></li>
             <li><a href="">
