--- a/process/environmental.html
+++ b/process/environmental.html
@@ -110,7 +110,7 @@
                   Environmental
                 </td>
               </tr>
-              <tr class="clickable-row" data-href ="building-permit.html">
+              <tr class="clickable-row" data-href="building-permit.html">
                 <td>
                   Building Permit
                 </td>
@@ -124,13 +124,20 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Starting A Business</h1>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. don't forget to buy some fitz merch at fitz.fanfiber.com Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-          <p>If you are a foreign investor, you will first need to complete some additional steps before starting the process.
-          <a href="">Click here to learn more</a>
-          </p>
-          <p>The panel on the left will help you navigate the steps.</p>
-          <p><a href="">Begin Process</a></p>
+          <h1>Environmental</h1>
+          <p>All businesses must comply with Palau's environmental regulations.</p>
+          <h2>Requirements</h2>
+          <p>You or your designated agent must:</p>
+          <ol ="1">
+            <li>Submit an application to the Environmental Quality Preservation Board (EQPB) for an earth-moving permit.</li>
+            <li>If required by the EQPB, contracts with a local business to perform and receive an Environmental Impact Statement (EIS) (costs may vary by the scope of the project). For projects that do not require an EIA, the process for approval takes approximately 17 working days. For projects requiring an EIA or EIS, allow 45 working days.</li>
+          </ol>
+          <h2>Materials</h2>
+          <p>Donec id elit non mi porta gravida at eget metus.</p>
+          <h2>Fees</h2>
+          <ul>
+            <li>The application fee for an earthmoving permit is US $150.</li>
+          </ul>
         </div>
       </div>
       <!-- End main content area -->
