--- a/process/immigration-labor.html
+++ b/process/immigration-labor.html
@@ -127,17 +127,16 @@
           <h1>Immigration and Labor</h1>
           <p>All businesses must comply with Palauan immigration and labor regulations.</p>
           <h2>Requirements</h2>
-          <p>You or your designated agent must:
-          <ol ="1">
+          <p>You or your designated agent must:</p>
+          <ol>
             <li>Apply for an investor's travel visa from the Department of Immigration, if needed.</li>
             <li>Register your company's Palauan employees with the Palauan Social Security Administration and obtain an employer identification number (EIN).
             </li>
             <li>Completer an application with the Bureau of Labor to receive approval to employ non-Palauan workers, if needed.
             </li>
           </ol>
-          </p>
           <h2>Materials</h2>
-          <p>Information required to register your company's Palauan employees with the Social Security Administration includes:
+          <p>Information required to register your company's Palauan employees with the Social Security Administration includes:</p>
           <ul>
             <li>Name</li>
             <li>Address</li>
@@ -150,7 +149,6 @@
             </li>
             <li>The Social Security registration fee is US $XX.</li>
           </ul>
-          </p>
         </div>
       </div>
       <!-- End main content area -->
