--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Website Name </a>
+              <a class="navbar-brand" href="index.html">Website Name </a>
             </div>
 
             <div id="navbar" class="navbar-collapse collapse">
