--- a/resources/all-applications.html
+++ b/resources/all-applications.html
@@ -43,7 +43,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="../index.html">Project name</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -130,11 +130,15 @@
           </p>
           <h2>National Forms</h2>
           <ul>
+            <li><a href="../applications/national/national-business-license.pdf">
+              Application For A Business License
+            </a></li>
             <li><a href="../applications/national/domestic-corporation.pdf">
               Information Required For Forming A Domestic Corporation
             </a></li>
             <li><a href="../applications/national/fib-requirement.pdf">
               Foreign Investment Bureau Basic Requirement For Establishing A Business In Palau
+            </a></li>
             <li><a href="../applications/national/fiac.pdf">
               Foreign Investment Approval Certificate Application Form
             </a></li>
@@ -147,6 +151,10 @@
             <li><a href="../applications/national/permit-to-enter.pdf">
               Application For A Permit To Enter And Work As An Investor
             </a></li>
+            <li><a href="../applications/national/nonresident-worker-application.pdf">
+              Nonresident Worker Application
+            </a></li>
+            <li><a href="../applications/national/"
             <li><a href="../applications/national/ssn-application.pdf">
               Employee Social Security Registration
             </a></li>
