adds pcoc and sbdc content

--- a/resources/sbdc.html
+++ b/resources/sbdc.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Website Name</title>
+    <title>Small Business Development Center</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -125,12 +125,76 @@
         </div>
         <div class="col-md-9">
           <h1>Small Business Development Center</h1>
+          <h3>Introducing Palau SBCD</h3>
           <p>
-            "Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, buy fitz merch, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-            <a href="">
-            Click here to visit the Small Business Development Center website.
-            </a>
+            The Palau Small Business Development Center (Palau SBDC) is a member of the University of Guam Pacific Islands Small Business Development Center Network (PISBDCN). The Palau SBDC is funded in part through a Cooperative Agreement with the U.S. Small Business Administration (SBA) and by the Palau National Government through the Ministry of Public Infrastructure, Industries, & Commerce (MPIIC).
           </p>
+          <h3>SBDC Mission & Vision</h3>
+          <h4>Mission:</h4>
+          <p>
+            The mission of PISBDCN is to support the growth and economic development of the U.S. affiliated islands in the Western Pacific region by providing high quality training and one-on-one confidential counseling to existing small business and to small business start-ups.
+          </p>
+          <h4>Vision:</h4>
+          <p>
+            PISBDCN supports a well-established, respected, adequately funded and capable Small Business Development Center network, recognized by the public, the private sector and host entities as the preeminent economic development agency in the region providing high quality business counseling, training, and information. PISBDCN will continue to build strong, effective, and functional partnerships while recognizing the cultural diversity of its constituents and will seek to overcome any barriers to their participation in the PISBDCN’s program and activities, including those arising from differences of language and culture.
+          </p>
+          <h3>SBDC Mission & Vision</h3>
+          <h5>Small Business Counseling</h5>
+          <ul>
+            <li>One-on-one counseling to existing and startup small businesses;</li>
+            <li>To create and maintain jobs in the community.</li>
+          </ul>
+          <h5>Small Business Training</h5>
+          <ul>
+            <li>Ongoing programs of workshops, conferences, and seminars</li>
+            <li>Designed to meet the needs of local small businesses</li>
+            <li>Offered at low to no cost offered either at the SBDC training center or other convenient, central locations based on demand</li>
+          </ul>
+          <h5>Small Business Assistance Center</h5>
+          <ul>
+            <li>Extensive small business library</li>
+            <li>Computer laboratory</li>
+            <li>Government & Local Business resource information</li>
+          </ul>
+          <h5>Community/Village Outreach</h5>
+          <ul>
+            <li>Available for presentation to schools, village organizations, and community groups.</li>
+          </ul>
+          <h3>Contact Information</h3>
+          <h5>Physical Address:</h5>
+          National Development Bank of Palau Complex
+          <br />
+          Across from KB Shell in Ngetkib, Airai
+
+          <h5>Phone Number:</h5>
+          <a href="tel:+680-587-6004">(680) 587-6004</a>
+
+          <h5>Mailing Address:</h5>
+          c/o National Development Bank of Palau
+          <br />
+          P.O. Box 816, Koror, Palau 96940
+
+          <h5>Fax Number:</h5>
+          (680) 587-1549
+
+          <h5>Facebook Page</h5>
+          <a href="https://www.facebook.com/Palau-SBDC-827089810722593/" target="_blank">Palau SBDC</a>
+
+          <h5>Email Address:</h5>
+          <a href="mailto:palausbdc@palaunet.com">palausbdc@palaunet.com</a>
+          <br />
+          <a href="mailto:LT@pacificsbdc.com">LT@pacificsbdc.com</a> (Director Fritz)
+          <br />
+          <a href="mailto:alfia@pacificsbdc.com">alfia@pacificsbdc.com</a>  (Office Mgr. Alfonso)
+
+          <h3>Resources</h3>
+          <ul>
+            <li><a href="https://pisbdcn.ecenterdirect.com/events" target="_blank">Palau SBDC Training Calendar</a></li>
+            <li><a href="https://pisbdcn.ecenterdirect.com/signup" target="_blank">Register for Counseling</a></li>
+            <li><a href="http://www.pacificsbdc.com/sites/default/files/2014-Republic-of-Palau-Business-Resource-Guide_0.pdf" target="_blank">2014 Palau Business Resource Guide</a></li>
+            <li><a href="http://www.pacificsbdc.com/resources/start-tools/business-plan-guide" target="_blank">Free Business Plan Guide (pdf)</a></li>
+
+          </ul>
         </div>
       </div>
       <!-- End main content area -->
