--- a/resources/pcoc.html
+++ b/resources/pcoc.html
@@ -124,13 +124,26 @@
           </table>
         </div>
         <div class="col-md-9">
-          <h1>Page Title</h1>
-          <p>The Palau Chamber of Commerce is a nonprofit organization dedicated to publicizing, promoting, and developing commercial and business opportunities within the Republic of Palau.
-          <a href="">
-          Click here to visit the Palau Chamber of Commerce website.
-          </a>
+          <h1>Palau Chamber of Commerce</h1>
+          <h3>Who we are</h3>
+          <p>
+            Established March 4, 1992, the Palau Chamber of Commerce (PCOC) is the Republic of Palau’s government recognized national private sector organization. We are a non-profit organization dedicated to advancing the interests of the private sector. We strive to be the first contact for any investors or companies looking to do business in Palau.
           </p>
-        </div>
+          <h3>What We Do</h3>
+          <p>
+            We strive to provide clear value to our membership and prioritize activities that provide clear benefits to our members and the public. Through our longstanding relationships with the national government we directly advocate for business friendly policies that foster a vibrant economy.
+          </p>
+          <h3>Becoming a Member</h3>
+          <p>
+            Any business registered in Palau can become a full member of the Palau Chamber of Commerce.  New members join our network of vetted, professional companies both large and small in all industries.
+          </p>
+          <h3>Why Join?</h3>
+          <p>
+            Through your membership, your company will be invited to monthly membership meetings where we have speakers from government, and the private sector speak on current events affecting the business community. Members also receive weekly emails with updates on what’s going on in Palau and the private sector. The Palau Chamber of Commerce is asked to review and comment on pending Foreign Investment Approval Certificate and Environmental Assessment applications. As a member you will have early access to new businesses and projects coming to Palau.
+          </p>
+          <p>
+            Every member is able and encouraged to participate in the various committees and groups, such as the Palau Labor Advisory Group, which is developing a new labor law for Palau. Through participation in our Policy Committee, your business will be able to shape Chamber policies and recommendations on proposed legislation and shape the development and the overall direction of our island nation.
+          </p>
       </div>
       <!-- End main content area -->
 
